@@ -1,24 +1,18 @@
 package com.gowri.ApiGateway.util;
 
 import org.apache.tomcat.util.codec.binary.Base64;
-import org.bouncycastle.asn1.pkcs.PrivateKeyInfo;
 import org.bouncycastle.util.io.pem.PemObject;
 import org.bouncycastle.util.io.pem.PemReader;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileReader;
-import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.security.KeyFactory;
-import java.security.NoSuchAlgorithmException;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
-import java.security.spec.EncodedKeySpec;
-import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 
@@ -32,7 +26,7 @@ public class KeyUtil {
 
     public RSAPublicKey readPublicKey() throws Exception {
         File publicKeyFile = new File(publicKeyPath);
-        String key = new String(Files.readAllBytes(publicKeyFile.toPath()), Charset.defaultCharset());
+        String key = Files.readString(publicKeyFile.toPath(), Charset.defaultCharset());
 
         String publicKeyPEM = key
                 .replace("-----BEGIN PUBLIC KEY-----", "")
@@ -56,8 +50,8 @@ public class KeyUtil {
 
             PemObject pemObject = pemReader.readPemObject();
             byte[] content = pemObject.getContent();
-            PKCS8EncodedKeySpec privKeySpec = new PKCS8EncodedKeySpec(content);
-            return (RSAPrivateKey) factory.generatePrivate(privKeySpec);
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(content);
+            return (RSAPrivateKey) factory.generatePrivate(keySpec);
         }
     }
 
